--- a/eureka/src/main/resources/application.yml
+++ b/eureka/src/main/resources/application.yml
@@ -7,6 +7,7 @@ server:
 
 eureka:
   instance:
+    hostname: ${SERVER_IP:127.0.0.1}
     prefer-ip-address: true  
     leaseRenewalIntervalInSeconds: 3
     leaseExpirationDurationInSeconds: 3   
@@ -16,4 +17,4 @@ eureka:
   server:
     waitTimeInMsWhenSyncEmpty: 5
   serviceUrl:
-    defaultZone: ${EUREKA:http://localhost:8761/eureka}
+    defaultZone: ${EUREKA:http://eureka:8761/eureka}
