--- a/wiki/src/main/resources/bootstrap.yml
+++ b/wiki/src/main/resources/bootstrap.yml
@@ -6,6 +6,7 @@ message: Secret Message
 
 eureka:
   instance:   
+    hostname: ${SERVER_IP:127.0.0.1}  
     leaseRenewalIntervalInSeconds: 10
   client:
     enabled: true
@@ -13,4 +14,4 @@ eureka:
     healthcheck:
       enabled: true
     serviceUrl:
-      defaultZone: ${EUREKA:http://localhost:8761/eureka}  
+      defaultZone: ${EUREKA:http://eureka:8761/eureka}  
